KeePassDX(2.9.12)
 * Fix OTP token type #863
 * Fix auto open biometric prompt #862

KeePassDX(2.9.11)
 * Add Keyfile XML version 2 (fix hex) #844
 * Fix hex Keyfile #861

KeePassDX(2.9.10)
 * Try to fix autofill #852
 * Fix database change dialog displayed too often #853

KeePassDX(2.9.9)
 * Detect file changes and reload database #794
 * Inline suggestions autofill with compatible keyboard (Android R) #827
 * Add Keyfile XML version 2 #844
 * Fix binaries of 64 bytes #835
 * Special search in title fields #830
 * Priority to OTP button in notifications #845
 * Fix OTP generation for long secret key #848
 * Fix small bugs #849

KeePassDX(2.9.8)
 * Fix specific attachments with kdbx3.1 databases #828
 * Fix small bugs

KeePassDX(2.9.7)
 * Remove write permission since Android 10 #823
 * Fix small bugs

KeePassDX(2.9.6)
 * Fix KeyFile bug #820

KeePassDX(2.9.5)
 * Unlock database by device credentials (PIN/Password/Pattern) with Android M+ #102 #152 #811
 * Prevent auto switch back to previous keyboard if otp field exists #814
 * Fix timeout reset #817

KeePassDX(2.9.4)
 * Fix small bugs #812
 * Argon2ID implementation #791

KeePassDX(2.9.3)
 * Unlock database by device credentials (PIN/Password/Pattern) #779 #102
 * Advanced unlock with timeout #102 #437 #566
 * Remove default database parameter when the file is no longer accessible #803
 * Move OTP button to the first view level in Magikeyboard #587
 * Tooltips for Magikeyboard #586
 * Fix small bugs #805

KeePassDX(2.9.2)
 * Managing OTP links from QR applications #556
 * Prevent manual creation of existing field name #718
 * Harmonization of field names #789
 * Different channels for each type of notification #688
 * Fix OTP #780 #781
 * Fix same save shared info #783
 * Fix switch back to previous keyboard #782
 * Fix read only #792
 * Better UI #719 #534 #617 #793

KeePassDX(2.9.1)
 * Copy password from generator #697
 * Fix Magikeyboard not fully visible #772
 * Fix change font size #770
 * Fix crash #774