@@ -1,2 +1,3 @@
  * Fix OTP token type #863
  * Fix auto open biometric prompt #862
+ * Fix back appearance setting #865
